--- a/src/docs/asciidoc/license.adoc
+++ b/src/docs/asciidoc/license.adoc
@@ -1,6 +1,6 @@
 == License
 
-Copyright 2014-2018 Vavr, http://vavr.io
+Copyright 2014-2018 Vavr, https://vavr.io
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
