--- a/README.adoc
+++ b/README.adoc
@@ -2,14 +2,10 @@
 
 This is the source of the http://docs.vavr.io/[Vavr documentation].
 
-=== Performing Updates
+== Performing Updates
 
-* Ensure `~/.gradle/gradle.properties` exists with:
-
-  githubUser=<GitHub user>
-  githubPassword=<GitHub password>
+* Ensure that `GITHUB_USER` and `GITHUB_TOKEN` variables are set in your environment.
 
 * Update the version in `gradle.properties`. Please note that the version in the Maven section of `getting_started.adoc` currently has to be updated manually.
 * Write documentation and test results with `./gradlew asciidoc`. If the Vavr API has changed, some code example tests might fail.
 * Then `git commit`, `git push` and `./gradlew publishGhPages`
-* Nowadays, `githubPassword` effectively means a token and not the actual password!
